data/derived/comb/progs/unify/prog6869.ml.out
Characters 42-45:
  let f a x = bigAdd a::[0] (mulByDigit x l1) in
                        ^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
